@@ -13,7 +13,7 @@ int  do_item_replace(item *it, item *new_it);
 
 /*@null@*/
 char *do_item_cachedump(const unsigned int slabs_clsid, const unsigned int limit, unsigned int *bytes);
-void do_item_stats(char *buffer, const int buflen);
+char *do_item_stats(int *bytes);
 
 /*@null@*/
 char *do_item_stats_sizes(int *bytes);
